corrected css to align content properly

--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,20 @@ body {
   margin: 0;
   min-height: 100%;
 }
-header {
-  background-color: blue;
-  /* color: #ffffff; */
-}
 ul {
   display: flex;
-  justify-content: center;
   list-style: none;
+  justify-content: center;
+}
+li {
+  margin: 2rem;
+}
+main {
+  margin-top: 10rem;
+}
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
